Bugs fix
1. fix dish quantity not display correctly in dish edit
2. Host / Dish / User not display 100% in phone
3. Add Dish not showing loading bar

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -1508,7 +1508,6 @@ fieldset[disabled] .btn-red.active {
 
   .pure-banner .banner-text{
     position: relative;
-    left: 5%;
   }
 
   .mynavbar #myNavBar .navbar-nav{
