--- a/views/emailTemplates/cancel/style.css
+++ b/views/emailTemplates/cancel/style.css
@@ -8945,7 +8945,6 @@ fieldset[disabled] .btn-red.active {
   }
   .pure-banner .banner-text {
     position: relative;
-    left: 5%;
   }
   .mynavbar #myNavBar .navbar-nav {
     margin-left: 0 !important;
